# kraken-ticker-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mcp_server_kraken/: __init__.py  __main__.py  server.py
